# homeassistant-sma

./: .gitignore  CODE_OF_CONDUCT.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
custom_components/sma_meter/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  sensor.py
custom_components/sma_meter/translations/: de.json  en.json
docs/: TESTING.md
scripts/: cleanup-ha-test.sh  run-tests.sh  setup-ha-test.sh
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py  test_diagnostics.py  test_init.py  test_sensor.py
